force-app/main/default/objects/Event__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <label>Event Hoder</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>My Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>