force-app/main/default/objects/Event__c/fields/End_Dates__c.field-meta.xml
<CustomField>
    <fullName>End_Dates__c</fullName>
    <label>End Dates</label>
    <type>DateTime</type>
</CustomField>