force-app/main/default/objects/Event__c/fields/RH_Approver__c.field-meta.xml
<CustomField>
    <fullName>RH_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events Approved</relationshipLabel>
    <relationshipName>EventsApproved</relationshipName>
    <type>Lookup</type>
</CustomField>