force-app/main/default/objects/Event__c/fields/Start_Dates__c.field-meta.xml
<CustomField>
    <fullName>Start_Dates__c</fullName>
    <label>Start Dates</label>
    <type>DateTime</type>
</CustomField>