force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Dates__c</columns>
    <columns>End_Dates__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>